[workspace]
members = [
    "account_manager",

    "beacon_node",
    "beacon_node/beacon_chain",
    "beacon_node/builder_client",
    "beacon_node/client",
    "beacon_node/eth1",
    "beacon_node/lighthouse_network",
    "beacon_node/execution_layer",
    "beacon_node/http_api",
    "beacon_node/http_metrics",
    "beacon_node/network",
    "beacon_node/store",
    "beacon_node/timer",

    "boot_node",

    "common/account_utils",
    "common/clap_utils",
    "common/compare_fields",
    "common/compare_fields_derive",
    "common/deposit_contract",
    "common/directory",
    "common/eth2",
    "common/eth2_config",
    "common/eth2_interop_keypairs",
    "common/eth2_network_config",
    "common/eth2_wallet_manager",
    "common/lighthouse_metrics",
    "common/lighthouse_version",
    "common/lockfile",
    "common/logging",
    "common/lru_cache",
    "common/malloc_utils",
    "common/oneshot_broadcast",
    "common/sensitive_url",
    "common/slot_clock",
    "common/system_health",
    "common/task_executor",
    "common/target_check",
    "common/test_random_derive",
    "common/unused_port",
    "common/validator_dir",
    "common/warp_utils",
    "common/monitoring_api",

    "database_manager",

    "consensus/cached_tree_hash",
    "consensus/int_to_bytes",
    "consensus/fork_choice",
    "consensus/proto_array",
    "consensus/safe_arith",
    "consensus/state_processing",
    "consensus/swap_or_not_shuffle",

    "crypto/bls",
    "crypto/kzg",
    "crypto/eth2_key_derivation",
    "crypto/eth2_keystore",
    "crypto/eth2_wallet",

    "lcli",

    "lighthouse",
    "lighthouse/environment",

    "slasher",
    "slasher/service",

    "testing/ef_tests",
    "testing/eth1_test_rig",
    "testing/execution_engine_integration",
    "testing/node_test_rig",
    "testing/simulator",
    "testing/test-test_logger",
    "testing/state_transition_vectors",
    "testing/web3signer_tests",

    "validator_client",
    "validator_client/slashing_protection",

    "watch",
]
resolver = "2"

[patch]
[patch.crates-io]
warp = { git = "https://github.com/macladson/warp", rev="7e75acc368229a46a236a8c991bf251fe7fe50ef" }
arbitrary = { git = "https://github.com/michaelsproul/arbitrary", rev="f002b99989b561ddce62e4cf2887b0f8860ae991" }

[patch."https://github.com/ralexstokes/mev-rs"]
mev-rs = { git = "https://github.com/ralexstokes//mev-rs", rev = "7813d4a4a564e0754e9aaab2d95520ba437c3889" }
[patch."https://github.com/ralexstokes/ethereum-consensus"]
ethereum-consensus = { git = "https://github.com/ralexstokes//ethereum-consensus", rev = "9b0ee0a8a45b968c8df5e7e64ea1c094e16f053d" }
[patch."https://github.com/ralexstokes/ssz-rs"]
ssz-rs = { git = "https://github.com/ralexstokes//ssz-rs", rev = "adf1a0b14cef90b9536f28ef89da1fab316465e1" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
