[workspace]
members = [
    "account_manager",

    "beacon_node",
    "beacon_node/beacon_chain",
    "beacon_node/beacon_processor",
    "beacon_node/builder_client",
    "beacon_node/client",
    "beacon_node/eth1",
    "beacon_node/lighthouse_network",
    "beacon_node/execution_layer",
    "beacon_node/http_api",
    "beacon_node/http_metrics",
    "beacon_node/network",
    "beacon_node/store",
    "beacon_node/timer",

    "boot_node",

    "common/account_utils",
    "common/clap_utils",
    "common/compare_fields",
    "common/compare_fields_derive",
    "common/deposit_contract",
    "common/directory",
    "common/eth2",
    "common/eth2_config",
    "common/eth2_interop_keypairs",
    "common/eth2_network_config",
    "common/eth2_wallet_manager",
    "common/lighthouse_metrics",
    "common/lighthouse_version",
    "common/lockfile",
    "common/logging",
    "common/lru_cache",
    "common/malloc_utils",
    "common/oneshot_broadcast",
    "common/pretty_reqwest_error",
    "common/sensitive_url",
    "common/slot_clock",
    "common/system_health",
    "common/task_executor",
    "common/target_check",
    "common/test_random_derive",
    "common/unused_port",
    "common/validator_dir",
    "common/warp_utils",
    "common/monitoring_api",

    "database_manager",

    "consensus/cached_tree_hash",
    "consensus/int_to_bytes",
    "consensus/fork_choice",
    "consensus/proto_array",
    "consensus/safe_arith",
    "consensus/state_processing",
    "consensus/swap_or_not_shuffle",

    "crypto/bls",
    "crypto/eth2_key_derivation",
    "crypto/eth2_keystore",
    "crypto/eth2_wallet",

    "lcli",

    "lighthouse",
    "lighthouse/environment",

    "slasher",
    "slasher/service",

    "testing/ef_tests",
    "testing/eth1_test_rig",
    "testing/execution_engine_integration",
    "testing/node_test_rig",
    "testing/simulator",
    "testing/test-test_logger",
    "testing/state_transition_vectors",
    "testing/web3signer_tests",

    "validator_client",
    "validator_client/slashing_protection",

    "validator_manager",

    "watch",
]
resolver = "2"

[patch]
[patch.crates-io]
# TODO: remove when 0.3.6 get's released.
warp = { git = "https://github.com/seanmonstar/warp.git", rev="149913fe" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
