[package]
name = "beacon_node"
version = "5.2.1"
authors = [
    "Paul Hauner <paul@paulhauner.com>",
    "Age Manning <Age@AgeManning.com",
]
edition = { workspace = true }

[lib]
name = "beacon_node"
path = "src/lib.rs"

[dev-dependencies]
node_test_rig = { path = "../testing/node_test_rig" }

[features]
write_ssz_files = [
    "beacon_chain/write_ssz_files",
] # Writes debugging .ssz files to /tmp during block processing.

[dependencies]
eth2_config = { workspace = true }
beacon_chain = { workspace = true }
types = { workspace = true }
store = { workspace = true }
client = { path = "client" }
clap = { workspace = true }
slog = { workspace = true }
dirs = { workspace = true }
directory = { workspace = true }
environment = { workspace = true }
task_executor = { workspace = true }
genesis = { workspace = true }
execution_layer = { workspace = true }
lighthouse_network = { workspace = true }
serde_json = { workspace = true }
clap_utils = { workspace = true }
hyper = { workspace = true }
hex = { workspace = true }
slasher = { workspace = true }
monitoring_api = { workspace = true }
sensitive_url = { workspace = true }
http_api = { workspace = true }
unused_port = { workspace = true }
strum = { workspace = true }
