[package]
name = "boot_node"
version = "4.4.1"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }

[dependencies]
beacon_node = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
lighthouse_network = { workspace = true }
types = { workspace = true }
ethereum_ssz = { workspace = true }
slog = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
slog-term = { workspace = true }
logging = { workspace = true }
slog-async = { workspace = true }
slog-scope = "4.3.0"
slog-stdlog = "4.0.0"
hex = { workspace = true }
serde = { workspace = true }
serde_derive = "1.0.116"
serde_json = { workspace = true }
serde_yaml = { workspace = true }
eth2_network_config = { workspace = true }
