[package]
name = "boot_node"
version = "5.3.0"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = { workspace = true }

[dependencies]
beacon_node = { workspace = true }
clap = { workspace = true }
clap_utils = { workspace = true }
lighthouse_network = { workspace = true }
types = { workspace = true }
ethereum_ssz = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
logging = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
eth2_network_config = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
