[package]
name = "lcli"
description = "Lighthouse CLI (modeled after zcli)"
version = "1.4.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[features]
portable = ["bls/supranational-portable"]

[dependencies]
bls = { path = "../crypto/bls" }
clap = "2.33.3"
hex = "0.4.2"
log = "0.4.11"
serde = "1.0.116"
serde_yaml = "0.8.13"
simple_logger = "1.10.0"
types = { path = "../consensus/types" }
state_processing = { path = "../consensus/state_processing" }
eth2_ssz = "0.1.2"
regex = "1.3.9"
futures = "0.3.7"
environment = { path = "../lighthouse/environment" }
eth2_network_config = { path = "../common/eth2_network_config" }
dirs = "3.0.1"
genesis = { path = "../beacon_node/genesis" }
deposit_contract = { path = "../common/deposit_contract" }
tree_hash = "0.1.1"
tokio = { version = "1.1.0", features = ["full"] }
clap_utils = { path = "../common/clap_utils" }
eth2_libp2p = { path = "../beacon_node/eth2_libp2p" }
validator_dir = { path = "../common/validator_dir", features = ["insecure_keys"] }
rand = "0.7.3"
eth2_keystore = { path = "../crypto/eth2_keystore" }
lighthouse_version = { path = "../common/lighthouse_version" }
directory = { path = "../common/directory" }
account_utils = { path = "../common/account_utils" }
eth2_wallet = { path = "../crypto/eth2_wallet" }
web3 = "0.14.0"
eth1_test_rig = { path = "../testing/eth1_test_rig" }
sensitive_url = { path = "../common/sensitive_url" }
