[package]
name = "lcli"
description = "Lighthouse CLI (modeled after zcli)"
version = "2.0.1"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"

[features]
portable = ["bls/supranational-portable"]
fake_crypto = ['bls/fake_crypto']

[dependencies]
bls = { path = "../crypto/bls" }
clap = "2.33.3"
log = "0.4.11"
serde = "1.0.116"
serde_yaml = "0.8.13"
serde_json = "1.0.66"
env_logger = "0.9.0"
types = { path = "../consensus/types" }
state_processing = { path = "../consensus/state_processing" }
eth2_ssz = "0.4.0"
environment = { path = "../lighthouse/environment" }
eth2_network_config = { path = "../common/eth2_network_config" }
genesis = { path = "../beacon_node/genesis" }
deposit_contract = { path = "../common/deposit_contract" }
tree_hash = "0.4.0"
clap_utils = { path = "../common/clap_utils" }
eth2_libp2p = { path = "../beacon_node/eth2_libp2p" }
validator_dir = { path = "../common/validator_dir", features = ["insecure_keys"] }
lighthouse_version = { path = "../common/lighthouse_version" }
directory = { path = "../common/directory" }
account_utils = { path = "../common/account_utils" }
eth2_wallet = { path = "../crypto/eth2_wallet" }
web3 = { version = "0.17.0", default-features = false, features = ["http-tls", "signing", "ws-tls-tokio"] }
eth1_test_rig = { path = "../testing/eth1_test_rig" }
sensitive_url = { path = "../common/sensitive_url" }
eth2 = { path = "../common/eth2" }
