[package]
name = "network-libp2p"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]

[dependencies]
bigint = "4.2"
bytes = ""
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
futures = "0.1.23"
libp2p-peerstore = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
libp2p-core = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
libp2p-mplex = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
libp2p-tcp-transport = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
libp2p-floodsub = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
libp2p-identify = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
libp2p-kad = { git = "https://github.com/sigp/libp2p-rs", branch ="zksummit" }
pem = "0.5.0"
rand = "0.3"
slog = "^2.2.3"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-stdin = "0.1"
tokio-timer = "0.1"
