[package]
name = "protos"
version = "0.1.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2018"
description = "Google protobuf message and service definitions used in Lighthouse APIs."

[dependencies]
futures = "0.1"
grpcio = { version = "0.4", default-features = false, features = ["protobuf-codec"] }
protobuf = "~2.8.1"

[build-dependencies]
protoc-grpcio = "0.3.1"
